--- a/static/style_registro.css
+++ b/static/style_registro.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: rgb(126, 2, 209);
     color: white;
@@ -10,20 +16,24 @@ div {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 70vh;
+    height: auto;
+    width: 100%;
+    padding: 20px;
 }
 
 div label {
-    padding-right: 22%;
+    padding-right: 15%;
     padding-top: 20px;
 }
+
 h1 {
+    margin-top: 12%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Times New Roman', Times, serif;
     letter-spacing: 2px;
-    
+    font-size: 2rem;
 }
 
 div input[type="submit"] {
@@ -38,16 +48,22 @@ div input[type="submit"] {
     font-size: 25px;
     font-weight: 700;
     transition: background-color 0.3s;
-
 }
+
 input[type="submit"]:hover {
     background-color: rgb(91, 0, 175);
     color: rgb(192, 192, 192);
+    transform: scale(1.05);
 }
 
 div input {
     padding: 10px;
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
+    margin: 10px 0;
+    border-radius: 1vh;
+    font-size: 1rem;
+    border: none;
 }
 
 .alert-danger {
@@ -55,10 +71,40 @@ div input {
     background-color: rgb(221, 29, 238);
     color: rgb(255, 255, 255);
     height: 50px;
-    width: 50vh;
+    width: 100%;
+    max-width: 50vh;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 200;
     text-shadow: 100%;
     border-radius: 10px;
+}
 
+
+@media (max-width: 768px) {
+    div {
+        height: auto;
+        padding: 20px;
+    }
+
+    div label {
+        padding-right: 0;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    div input[type="submit"] {
+        width: 60%;
+        font-size: 20px;
+    }
+
+    div input {
+        width: 80%;
+    }
+
+    .alert-danger {
+        width: 80%;
+        max-width: none;
+    }
 }
