--- a/static/syle_home.css
+++ b/static/syle_home.css
@@ -1,13 +1,10 @@
-
 body {
     background-color: rgb(126, 2, 209);
     color: white;
     padding: 0;
     margin: 0;
     min-height: 100vh;
-    width: 100vw; 
 }
-    
 
 div {
     display: flex;
@@ -15,53 +12,84 @@ div {
     align-items: center;
     flex-direction: column;
     height: 70vh;
+    text-align: center;
 }
 
 nav {
-    
     display: flex;
     justify-content: flex-end;
-    background-color: rgba(0, 0, 0, 0.3); 
-    padding: 5px;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 10px 5%;
 }
-a {
-    text-decoration: none;
-    color: inherit; 
-    
-}
-a:visited {
-    color: inherit;
-    
-}
+
 nav ul {
     list-style: none;
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
 }
+
 nav li {
     display: inline-block;
-    
-
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:visited {
+    color: inherit;
+}
 
 .btn, .btn2 {
     display: inline-block;
     text-align: center;
     background-color: rgb(106, 1, 175);
     color: white;
-    padding: 15px 30px; /* Ajusta o tamanho */
+    padding: 15px 30px;
     border-radius: 7px;
     transition: 0.4s;
     width: 25vh;
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-
 }
 
 .btn:hover, .btn2:hover {
     background-color: rgba(171, 135, 196, 0);
-    
 }
+
 p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.2em;
+}
+
+@media (max-width: 1024px) {
+    nav {
+        justify-content: center;
+    }
+    
+    nav ul {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .btn, .btn2 {
+        width: 20vh;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 768px) {
+    div {
+        height: auto;
+        padding: 20px;
+    }
+
+    .btn, .btn2 {
+        width: 100%;
+        font-size: 16px;
+        padding: 10px;
+    }
 }
